--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
 
     <script src="./ngl_files/firebase.js"></script>
