--- a/sent.html
+++ b/sent.html
@@ -7,6 +7,7 @@
     <title>NGL - Sent!</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="./sent_files/normalize.css">
     <link rel="stylesheet" href="./ngl_files/normalize.css">
     <link rel="stylesheet" href="./sent_files/style.css">
