--- a/sent.html
+++ b/sent.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./sent_files/normalize.css">
     <link rel="stylesheet" href="./ngl_files/normalize.css">
     <link rel="stylesheet" href="./sent_files/style.css">
-       <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <script src="./sent_files/jquery.min.js"></script>
     <script src="./sent_files/main.js"></script>
@@ -26,6 +26,7 @@
     </script>
 
 
+    <link rel="icon" type="image/x-icon" href="https://i.playboard.app/p/086987c02279eb8761d1088a017d9d17/default.jpg">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:image">
     <meta property="og:title" content="@user: Send me anonymous messages!">
