--- a/sent_prank.html
+++ b/sent_prank.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>NGL - Sent!</title>
+    <link rel="icon" type="image/x-icon" href="https://i.playboard.app/p/086987c02279eb8761d1088a017d9d17/default.jpg">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
