--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="icon" type="image/x-icon" href="https://i.playboard.app/p/086987c02279eb8761d1088a017d9d17/default.jpg">
 
     <script src="./ngl_files/firebase.js"></script>
     <script src="./ngl_files/jquery.min.js"></script>
     <script src="./ngl_files/main.js"></script>
 
     <title>@akbaraji731</title>
+    <link rel="icon" type="image/x-icon" href="https://i.playboard.app/p/086987c02279eb8761d1088a017d9d17/default.jpg">
     <link rel="stylesheet" href="./ngl_files/normalize.css">
     <link rel="stylesheet" href="./ngl_files/style.css">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -51,8 +51,8 @@
         </form>
     </div>
     <div class="bottom-container">
-        <h2 class="download-prompt">👇 <span class="clickCount">731</span> people just tapped the button👇 </h2><a
-            class="button download-link pulse" href="https://play.google.com/store/apps/dev?id=8834799443673829033"
+        <h2 class="download-prompt">👇 <span class="clickCount">731</span> people just tapped the button👇 </h2>
+        <a class="button download-link pulse" href="https://play.google.com/store/apps/dev?id=8834799443673829033"
             target="_blank">Get your own messages!</a>
         <div class="tos-privacy"><a class="tos" href="https://ngl.link/p/terms">Terms</a><a class="privacy"
                 href="https://ngl.link/p/privacy">Privacy</a></div>
