--- a/sent.html
+++ b/sent.html
@@ -60,7 +60,7 @@
                     <div class="top-left-corner"></div>
                     <textarea placeholder="Masukkan disini..." name="question" id="question"></textarea>
                 </div>
-                <button class="submit" type="submit" onclick="send()" style="display: none;">Send!</button>
+                <button class="submit" type="submit" onclick="send()" style="display: none;">Cek</button>
         </form>
     </div>
 
